# ontology-worlds

./: .gitignore  .mcp.json  CLAUDE.md  README.md  create_world.py  demo.py  index.html  init.py  map.py  requirements.txt
.claude/: settings.json
apps/: app_construction.py  data_store.py  requirements.txt
apps/pages/: construction.py
court_case_reasoning_world/: .live_map  CLAUDE.md  demo.py  log_entities.py  ontokit.json  validation_log.jsonl
court_case_reasoning_world/.claude/: settings.json  settings.local.json
court_case_reasoning_world/hooks/: pre_tool_call.py
court_case_reasoning_world/ontology/: court_case_reasoning_ontology.json
court_case_reasoning_world/src/: __init__.py  ontology_graph.py
data_design_interfaces_world/: .mcp.json  CLAUDE.md  couplage_celeste.html  couplage_circuit.html  couplage_fils.html  couplage_graphe.html  couplage_manuscrit.html  ontokit.json
data_design_interfaces_world/apps/: app.py  app_consommation.py  data_store.py
data_design_interfaces_world/ontology/: data_design_interfaces_ontology.json
hooks/: post_tool_call.py  pre_tool_call.py  statusline.py
machines_attentionnelles_world/: CLAUDE.md  log_entities.py  map.py  ontokit.json  requirements.txt
machines_attentionnelles_world/hooks/: post_tool_call.py
machines_attentionnelles_world/mcp/: pyproject.toml
machines_attentionnelles_world/mcp/wikidata_mcp/: __init__.py  __main__.py
mcp/: pyproject.toml
ontology/: opendata_france_ontology.json
src/: claude_md_generator.py  constrained_client.py  visualize.py
tests/: test_world_self_contained.py
(+63 files in other folders)
